# syndb-docs

./: 404.html  CNAME  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yaml
dataset/0-overview/: index.html
dataset/1-search/: index.html
dataset/2-upload/: index.html
dataset/3-external/: index.html
docs/: troubleshoot.md
docs/dataset/: 0-overview.md  1-search.md  2-upload.md  3-external.md
docs/get_started/: 0-home.md  1-why_syndb.md  2-install.md  3-quick_start.md
docs/guides/: choose_dataset_license.md  contributors_data_structuring.md
get_started/0-home/: index.html
get_started/1-why_syndb/: index.html
get_started/2-install/: index.html
get_started/3-quick_start/: index.html
guides/choose_dataset_license/: index.html
guides/contributors_data_structuring/: index.html
includes/: abbreviations.md  macros.yaml
search/: search_index.json
stylesheets/: extra.css
troubleshoot/: index.html
